# rmup-fork

./: .gitignore  Cargo.toml
src/: command.rs  config.rs  library.rs  main.rs  media_system.rs  mpris.rs  playlist.rs  traits.rs  ui.rs  util.rs
src/ui/: command_line.rs  help_screen.rs  main_screen.rs  playlist_screen.rs
