[package]
name = "rmup"
version = "0.9.7"
authors = ["Jadelynn Cheatum <cheatumj@protonmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A cross-platform TUI music player"
repository = "https://gitlab.com/jcheatum/rmup.git"
homepage = "https://gitlab.com/jcheatum/rmup.git"
readme = "README.md"
keywords = ["music", "tui", "terminal", "cross-platform"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
async-std = { version = "1.13.0", features = ["attributes"] }
crossterm = { version = "0.28.1", features = ["serde"] }
dirs-next = "2.0.0"
getopts = "0.2.21"
lofty = "0.21.1"
rand = "0.8.5"
regex = "1.11.1"
rodio = { version = "0.20.1", features = ["symphonia-all"] }
serde = { version = "1.0.214", features = ['derive'] }
serde_yml = "0.0.12"
ratatui = { version = "0.29.0", features = ["serde"] }
unicode-width = "0.2.0"
map-macro = "0.3.0"
tui-textarea = "0.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.8.1"
